# Alsa_record_audio_cpp

./: CMakeLists.txt  README.md
cpp/: AlsaCaptureAudio.cpp  testAlsa.cpp
include/: AlsaCaptureAudio.h
